# gaussian-splatting-renderer

./: validate.py
app/: index.html  package-lock.json  package.json
app/public/: cameras.json
app/src/: main.ts  ply.ts  util.ts
wasm/: Cargo.toml
wasm/src/: lib.rs
wasm/src/shader/: preprocess.wgsl  range.wgsl  rasterize.wgsl  render.wgsl  util.wgsl
