[package]
name = "gs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.16.0"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
futures-channel = "0.3.30"
js-sys = "0.3.69"

log = "0.4.21"
nalgebra = "0.32.5"

wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys = "0.3.69"
wgpu = "0.19.0"
wgpu-core = "0.20.0"
wgpu_sort = "0.1.0"
winit = "0.29"


[lib]
crate-type = ["cdylib", "rlib"]
